# tomahawk-plugin-audio-effects

./: CMakeLists.txt  README.md  effects.ui
plugins/equalizer/: CMakeLists.txt  Equalizer.cpp  Equalizer.h  GraphicEq.cpp  equalizer.ui  fft3.c
plugins/loudness/: .kdev_include_paths  CMakeLists.txt  Loudness.cpp  Loudness.h  loudness.ui
src/: DspGraph.cpp  DspGraph.h  DspPlugin.cpp  DspPlugin.h  DspPluginInterface.h  DspWidget.cpp  DspWidget.h
